--- a/enkas/English.html
+++ b/enkas/English.html
@@ -5,9 +5,9 @@
 <title>English - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="English">Enka Category</a><br><br>
 <h2>
-<a id="English">English</a><br><br>
+English<br><br>
 <a href="#Nothing's Gonna Change My Love For You">Nothing's Gonna Change My Love For You</a><br>
 </h2>
 <br><hr><br><h1>
@@ -59,5 +59,5 @@ You oughta know by now how much I love you<br>
 The world may change my whole life through<br>
 But nothing's gonna change my love for you<br>
 </h1><br><h3><a href="#English">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
