--- a/enkas/Français.html
+++ b/enkas/Français.html
@@ -5,9 +5,9 @@
 <title>Français - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="Français">Enka Category</a><br><br>
 <h2>
-<a id="Français">Français</a><br><br>
+Français<br><br>
 <a href="#In Un Fiore">In Un Fiore</a><br>
 </h2>
 <br><hr><br><h1>
@@ -37,5 +37,5 @@ Non sai X3<br>
 C'è tanto amore (Per te)<br>
 C'è tanto amore (Per te)<br>
 </h1><br><h3><a href="#Français">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
