--- a/enkas/あ.html
+++ b/enkas/あ.html
@@ -5,9 +5,9 @@
 <title>あ - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="あ">Enka Category</a><br><br>
 <h2>
-<a id="あ">あ</a><br><br>
+あ<br><br>
 <a href="#Aibo">Aibo</a><br>
 <a href="#あこがれの郵便馬車">あこがれの郵便馬車</a><br>
 <a href="#あなたがいるから">あなたがいるから</a><br>
@@ -177,7 +177,7 @@ Ha... You are the one<br>
 3/4 バラ色のほほえみ　青い空<br>
 幸せな二人は　よりそう<br>
 <br>
-亜麻色の長い髪を<br>
+亜麻色の　長い髪を<br>
 風がやさしくつつむ<br>
 乙女は羽のように　丘をくだる<br>
 彼のもとへ<br>
@@ -243,7 +243,7 @@ Ha... You are the one<br>
 <br>
 5 サー　沖縄よいとこ　一度はおいで<br>
 春、夏、秋、冬　みどりの島よ<br>
-マタハーリヌ　チンダラ　カヌシャマヨ<br>
+マタハーリヌ　ツィンダラ　カヌシャマヨ<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="愛される花愛されぬ花">【愛される花愛されぬ花】</a>A1-C3<br>
@@ -311,7 +311,8 @@ Ha... You are the one<br>
 <br>
 1 小鳥たちは　何を騒ぐの<br>
 甘い果実が　欲しいのですか<br>
-他人かと比較べる幸せ　なんて　いらない<br>
+他人かと比較べる幸せ<br>
+なんて　いらない<br>
 あなたの視線が愛しくあれば…<br>
 <br>
 あぁ　この世に生まれ　巡り逢う奇跡<br>
@@ -341,33 +342,27 @@ Ha... You are the one<br>
 <a id="愛のメモリー">【愛のメモリー】</a>E1-A2-升半音<br>
 <br>
 1 愛の甘いなごりに　あなたはまどろむ<br>
-天使のような　その微笑みに<br>
-時は立ち止まる<br>
+天使の様な　その微笑みに　時は立ち止まる<br>
 <br>
 窓に朝の光が　優しくゆれ<ruby><rb>動</rb><rt>うご</rt></ruby>き<br>
-あなたの髪を　<ruby><rb>躊躇</rb><rt>ためら</rt></ruby>いがちに<br>
-染めてゆく<br>
+あなたの髪を　<ruby><rb>躊躇</rb><rt>ためら</rt></ruby>いがちに　染めてゆく<br>
 <br>
 美しい人生よ　限りない喜びよ<br>
 この胸の時めきを　あなたに<br>
 <br>
-この世に大切なのは<br>
-愛し合うことだけと<br>
+この世に大切なのは　愛し合うことだけと<br>
 あなたはおしえてくれる<br>
 <br>
 ２ 愛は風のささやき　あなたは目<ruby><rb>覚</rb><rt>ざ</rt></ruby>める<br>
-子供のような　瞳を向けて<br>
-指をからめるよ<br>
+子供の様な　瞳を向けて　指を<ruby><rb>絡</rb><rt>から</rt></ruby>めるよ<br>
 <br>
 そっと肌をよせれば　水仙の花のような<br>
-優しい香りが　はじらうように<br>
-揺れている<br>
+優しい香りが　<ruby><rb>恥</rb><rt>は</rt></ruby>じらう様に　揺れている<br>
 <br>
 美しい人生は　言葉さえ置き忘れ<br>
 <ruby><rb>満</rb><rt>み</rt></ruby>ち<ruby><rb>足</rb><rt>た</rt></ruby>りた二人を　包むよ<br>
 <br>
-この世に大切なのは<br>
-愛し合うことだけと<br>
+この世に大切なのは　愛し合うことだけと<br>
 あなたはおしえてくれる<br>
 <br>
 （升半音）<br>
@@ -395,8 +390,7 @@ Ha... You are the one<br>
 <br>
 見上げる　空の青さを<br>
 気まぐれに雲は流れ<br>
-綺麗なものは遠くに<br>
-あるから綺麗なの<br>
+綺麗なものは遠くに　あるから綺麗なの<br>
 <br>
 約束したとおりあなたと<br>
 ここに<ruby><rb>来</rb><rt>こ</rt></ruby>られて本当に良かったわ<br>
@@ -405,7 +399,7 @@ Ha... You are the one<br>
 何が愛かわからないほど<br>
 <br>
 愛をこめて花束を<br>
-大<ruby><rb>袈裟</rb><rt>げさ</rt></ruby>だけど　受け取っ　て<br>
+大<ruby><rb>袈裟</rb><rt>げさ</rt></ruby>だけど　受け取って<br>
 理由なんて　<ruby><rb>訊</rb><rt>き</rt></ruby>かないでよね<br>
 今だけすべて忘れて<br>
 笑わないで　受けとめて<br>
@@ -451,30 +445,30 @@ pink, yellow green, ash, brown......<br>
 <br><hr><br><h1>
 <a id="愛人">【愛人】</a>A1-D3<br>
 <br>
-1 あなたが好きだからそれでいいのよ<br>
-たとえ一緒に街を歩けなくても<br>
-この部屋にいつも帰ってくれたら<br>
-私は待つ身の女でいいの<br>
+1 あなたが　好きだからそれでいいのよ<br>
+たとえ一緒に街を　歩けなくても<br>
+この部屋に　いつも帰ってくれたら<br>
+私は　待つ身の女でいいの<br>
 <br>
 尽くして　泣きぬれて　そして愛されて<br>
 時が二人を　離さぬように<br>
 見つめて　寄りそって　そして抱きしめて<br>
-このまま　あなたの胸で　暮らしたい<br>
+このままあなたの　胸で　暮らしたい<br>
 <br>
 2 めぐり逢い　少しだけ<ruby><rb>遅</rb><rt>おそ</rt></ruby>いだけなの<br>
 何も言わずいてね　わかっているわ<br>
 心だけ　せめて残してくれたら<br>
-私は見送る女でいいの<br>
+私は　見送る女でいいの<br>
 <br>
 尽くして　泣きぬれて　そして愛されて<br>
 明日が二人を　怖さぬように<br>
 離れて　恋しくて　そして会いたくて<br>
-このまま　あなたの胸で　眠りたい<br>
+このままあなたの　胸で　眠りたい<br>
 <br>
 3 尽くして　泣きぬれて　そして愛されて<br>
 時が二人を　離さぬように<br>
 見つめて　寄りそって　そして抱きしめて<br>
-このまま　あなたの胸で　暮らしたい<br>
+このままあなたの　胸で　暮らしたい<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="愛燦燦">【愛燦燦】</a>E1-A2<br>
@@ -698,5 +692,5 @@ pink, yellow green, ash, brown......<br>
 雨々ふれふれ　もっとふれ<br>
 私のいい人　連れて来い<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
