--- a/enkas/い.html
+++ b/enkas/い.html
@@ -5,9 +5,9 @@
 <title>い - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="い">Enka Category</a><br><br>
 <h2>
-<a id="い">い</a><br><br>
+い<br><br>
 <a href="#いい日旅立ち">いい日旅立ち</a><br>
 <a href="#いい日旅立ち・西へ">いい日旅立ち・西へ</a><br>
 <a href="#潮来笠">潮来笠</a><br>
@@ -207,5 +207,5 @@
 逢うべき糸に　出逢えることを<br>
 人は仕合わせと　呼びます<br>
 </h1><br><h3><a href="#い">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
