--- a/enkas/う.html
+++ b/enkas/う.html
@@ -5,9 +5,9 @@
 <title>う - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="う">Enka Category</a><br><br>
 <h2>
-<a id="う">う</a><br><br>
+う<br><br>
 <a href="#美わしの琉球">美わしの琉球</a><br>
 <a href="#運命のルーレット廻して">運命のルーレット廻して</a><br>
 </h2>
@@ -67,5 +67,5 @@
 <br>
 ずっと　君を見ていた<br>
 </h1><br><h3><a href="#う">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
