--- a/enkas/え.html
+++ b/enkas/え.html
@@ -5,9 +5,9 @@
 <title>え - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="え">Enka Category</a><br><br>
 <h2>
-<a id="え">え</a><br><br>
+え<br><br>
 <a href="#越冬つばめ">越冬つばめ</a><br>
 </h2>
 <br><hr><br><h1>
@@ -37,5 +37,5 @@
 ヒュルリ　ヒュルリララ<br>
 古い恋ですか女です<br>
 </h1><br><h3><a href="#え">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
