--- a/enkas/お.html
+++ b/enkas/お.html
@@ -5,9 +5,9 @@
 <title>お - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="お">Enka Category</a><br><br>
 <h2>
-<a id="お">お</a><br><br>
+お<br><br>
 <a href="#おどるポンポコリン">おどるポンポコリン</a><br>
 <a href="#おんな港町">おんな港町</a><br>
 <a href="#お祭りマンボ">お祭りマンボ</a><br>
@@ -303,5 +303,5 @@
 あっぱれ　あっぱれ　あっぱれ<br>
 あっぱれ　あっぱれ　<ruby><rb>幸</rb><rt>さき</rt></ruby>はふ国よ<br>
 </h1><br><h3><a href="#お">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
