--- a/enkas/か.html
+++ b/enkas/か.html
@@ -5,9 +5,9 @@
 <title>か - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="か">Enka Category</a><br><br>
 <h2>
-<a id="か">か</a><br><br>
+か<br><br>
 <a href="#Girl">Girl</a><br>
 <a href="#かもめが翔んだ日">かもめが翔んだ日</a><br>
 <a href="#川の流れのように">川の流れのように</a><br>
@@ -16,7 +16,7 @@
 <a href="#買物ブギー">買物ブギー</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="Girl">【Girl】</a>A1-A2-F作C（最高音<sup>b</sup>B2）<br>
+<a id="Girl">【Girl】</a>A1-升5半音（F作C）-同名大小调-最高音<sup>b</sup>B2<br>
 <br>
 1 「いつかきっと　終わるけれど<br>
 悲しむのは　最後でいい」と<br>
@@ -24,10 +24,12 @@
 僕は何も　言えなくなる<br>
 静かになる　苦しくなる<br>
 <br>
+（升5半音，F作C）<br>
 こんなに　抱き合っても　背中は寒いね<br>
 僕には　君が落とす涙の<br>
 <ruby><rb>温</rb><rt>ぬく</rt></ruby>もりを感じる　ことしかできなくて<br>
 <br>
+（回原调）<br>
 ときに僕を　見つめながら<br>
 やさしく壊れる　Girl<br>
 <br>
@@ -38,19 +40,23 @@
 僕の胸は　<ruby><rb>氷</rb><rt>こおり</rt></ruby>のように<br>
 きしんでいる　音をたてる<br>
 <br>
+（升5半音，F作C）<br>
 このまま　この時間に<br>
 とり残　されたいね<br>
 愛なら　どこにあってもいい<br>
 言葉のなかにでも　涙のなかにでも<br>
 <br>
+（回原调）<br>
 ときに僕を　<ruby><rb>疑</rb><rt>うたが</rt></ruby>いながら<br>
 やさしく壊れる　Girl<br>
 <br>
+（同名大调，即升3半音）<br>
 3 君と僕のどっちが先に<br>
 雨の中の旅に出るのか<br>
 そのときの君も　そのときの君も<br>
 とても綺麗だと思う<br>
 <br>
+（原调升5半音，F作C）<br>
 このまま　この時間に<br>
 とり残　されたいね<br>
 愛なら　どこにあってもいい<br>
@@ -132,21 +138,24 @@
 あの娘は小さく　<ruby><rb>頷</rb><rt>うなず</rt></ruby>いた<br>
 茜の空で　誓った恋を<br>
 東京<ruby><rb>暮</rb><rt>ぐ</rt></ruby>らしで　忘れたか<br>
-帰ってこいよ　帰ってこいよ　帰ってこいよ<br>
+帰ってこいよ　帰ってこいよ<br>
+帰ってこいよ<br>
 <br>
 2 白いリンゴの　花かげで<br>
 遊んだ頃が　懐かしい<br>
 気立ての優しい　<ruby><rb>娘</rb><rt>こ</rt></ruby>だったよ<br>
 お前の嫁に　欲しかったねと<br>
 おふくろ今夜も　一人ごと<br>
-帰ってこいよ　帰ってこいよ　帰ってこいよ<br>
+帰ってこいよ　帰ってこいよ<br>
+帰ってこいよ<br>
 <br>
 3 可愛いあの娘の　帰る日を<br>
 お岩木山で　今日も又<br>
 津軽の風と　待っている<br>
 忘れはしまい　あの約束の<br>
 こんなに綺麗な　茜空<br>
-帰ってこいよ　帰ってこいよ　帰ってこいよ<br>
+帰ってこいよ　帰ってこいよ<br>
+帰ってこいよ<br>
 </h1><br><h3><a href="#か">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="河内おとこ節">【河内おとこ節】</a>C1-G2<br>
@@ -249,5 +258,5 @@
 わて本間に言ういわんわ<br>
 あー　しんど<br>
 </h1><br><h3><a href="#か">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
