--- a/enkas/き.html
+++ b/enkas/き.html
@@ -5,9 +5,9 @@
 <title>き - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="き">Enka Category</a><br><br>
 <h2>
-<a id="き">き</a><br><br>
+き<br><br>
 <a href="#きよしのズンドコ節">きよしのズンドコ節</a><br>
 <a href="#きよしのソーラン節">きよしのソーラン節</a><br>
 <a href="#キミがいれば">キミがいれば</a><br>
@@ -64,7 +64,7 @@
 ズンズンズン　ズンドコ<br>
 </h1><br><h3><a href="#き">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="きよしのソーラン節">【きよしのソーラン節】</a>E1-E2-同名大小调<br>
+<a id="きよしのソーラン節">【きよしのソーラン節】</a>A1-同名大小调-最高音E3<br>
 <br>
 （同名大调）<br>
 0 ヤーレンソーランソーランソーラン<br>
@@ -296,7 +296,7 @@ I wanna cry for you<br>
 時を<ruby><rb>費</rb><rt>つい</rt></ruby>やせるから<br>
 </h1><br><h3><a href="#き">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="銀の龍の背に乗って">【銀の龍の背に乗って】</a>E1-C3-同名大小调<br>
+<a id="銀の龍の背に乗って">【銀の龍の背に乗って】</a>E1-C3-同名大小调-最高音D3<br>
 <br>
 １ あの蒼ざめた海の彼<ruby><rb>方</rb><rt>かなた</rt></ruby>で<br>
 今まさに　誰かが　<ruby><rb>傷</rb><rt>いた</rt></ruby>んでいる<br>
@@ -342,5 +342,5 @@ I wanna cry for you<br>
 運んで行こう　雨雲の<ruby><rb>渦</rb><rt>うず</rt></ruby>を<br>
 銀の龍の背に乗って　銀の龍の背に乗って<br>
 </h1><br><h3><a href="#き">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
