--- a/enkas/け.html
+++ b/enkas/け.html
@@ -5,9 +5,9 @@
 <title>け - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="け">Enka Category</a><br><br>
 <h2>
-<a id="け">け</a><br><br>
+け<br><br>
 <a href="#Gaining Through Losing">Gaining Through Losing</a><br>
 <a href="#月光">月光</a><br>
 </h2>
@@ -105,5 +105,5 @@ I can't hang out this world<br>
 どこにも居場所なんて無い<br>
 How do I live on such a field?<br>
 </h1><br><h3><a href="#け">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
