--- a/enkas/こ.html
+++ b/enkas/こ.html
@@ -5,9 +5,9 @@
 <title>こ - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="こ">Enka Category</a><br><br>
 <h2>
-<a id="こ">こ</a><br><br>
+こ<br><br>
 <a href="#子連れ狼">子連れ狼</a><br>
 <a href="#心の旅">心の旅</a><br>
 <a href="#心の糸">心の糸</a><br>
@@ -439,5 +439,5 @@ AAA III EEO AIO<br>
 映さんとてか　今も<ruby><rb>尚</rb><rt>なお</rt></ruby><br>
 嗚呼荒城の　<ruby><rb>夜半</rb><rt>よわ</rt></ruby>の月<br>
 </h1><br><h3><a href="#こ">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
