--- a/enkas/さ.html
+++ b/enkas/さ.html
@@ -5,9 +5,9 @@
 <title>さ - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="さ">Enka Category</a><br><br>
 <h2>
-<a id="さ">さ</a><br><br>
+さ<br><br>
 <a href="#さあ歩きはじめよう">さあ歩きはじめよう</a><br>
 <a href="#さくらんぼ">さくらんぼ</a><br>
 <a href="#さそり座の女">さそり座の女</a><br>
@@ -179,7 +179,7 @@
 愛は今も　愛のままで<br>
 </h1><br><h3><a href="#さ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="桜色舞うころ">【桜色舞うころ】</a>G1-bB2-升半音<br>
+<a id="桜色舞うころ">【桜色舞うころ】</a>G1-<sup>b</sup>B2-升半音<br>
 <br>
 1 桜色舞うころ　私は一人<br>
 押さえきれぬ胸に　立ち尽くしてた<br>
@@ -212,6 +212,7 @@
 「永遠」の中　二人とどめて<br>
 ここに　生き続けて<br>
 <br>
+（升半音）<br>
 巡る木々たちだけが<br>
 二人を見ていたの<br>
 人ところにはとどまれないと<br>
@@ -279,5 +280,5 @@
 あゝ　父さんよ　御<ruby><rb>無事</rb><rt>ぶじ</rt></ruby>でと<br>
 今夜も　母さんと　祈ります<br>
 </h1><br><h3><a href="#さ">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
