--- a/enkas/し.html
+++ b/enkas/し.html
@@ -5,9 +5,9 @@
 <title>し - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="し">Enka Category</a><br><br>
 <h2>
-<a id="し">し</a><br><br>
+し<br><br>
 <a href="#Secret of my heart">Secret of my heart</a><br>
 <a href="#上海ラブソング">上海ラブソング</a><br>
 <a href="#上海慕情 ">上海慕情 </a><br>
@@ -21,7 +21,7 @@
 <a href="#知床旅情（オホーツクの舟唄）">知床旅情（オホーツクの舟唄）</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="Secret of my heart">【Secret of my heart】</a>C1-C2-多次变调<br>
+<a id="Secret of my heart">【Secret of my heart】</a>C1-同名大小调-多次变调-最高音E2<br>
 <br>
 1 どんな　言葉に変えて<br>
 君に　伝えられるだろう<br>
@@ -31,18 +31,21 @@
 私にも言えないことがまだ<br>
 ひとつだけある<br>
 <br>
+（同名大调）<br>
 Secret of my heart　<ruby><rb>疑</rb><rt>うたが</rt></ruby>ってもないね<br>
 いつだって少しの未来があれば<br>
 真実は　手に入れられるはず<br>
 I can't say　もう少しだけ<br>
 I'm waiting for a chance<br>
 <br>
+（回小调）<br>
 2 こんな　穏やかなとき<br>
 もっと <ruby><rb>繋</rb><rt>つな</rt></ruby>がっていたい<br>
 <ruby><rb>全</rb><rt>すべ</rt></ruby>てを見せるのが　怖くて<br>
 少し離れて歩く　君の横顔がなぜか<br>
 壊れそうで　守りたいもっと近づきたいよ<br>
 <br>
+（同名大调）<br>
 Secret of my heart<br>
 わかってくれるよね<br>
 誰だって　逃げたい時もあるけど<br>
@@ -52,14 +55,18 @@ I'm calling for a chance<br>
 <br>
 3 Can I tell the truth?<br>
 その言葉言えず　<ruby><rb>空</rb><rt>から</rt></ruby>回りする唇に<br>
+（上述调降2半音，即原调升半音）<br>
 Feeling in my heart　隠せない　これ以上<br>
 'Cause I love you<br>
 <br>
+（降2半音，即原调升半音）<br>
 I will be with you<br>
 Wherever you are<br>
+（上述调同名小调，即原调升2半音）<br>
 Can you feel my heart?<br>
 Can you feel my heart?<br>
 <br>
+（上述调升半音，即原调同名大调）<br>
 4 Can't you see, you're my dream<br>
 <ruby><rb>失</rb><rt>うしな</rt></ruby>いたくないよ<br>
 大切な　君と過ごすこの時間<br>
@@ -116,7 +123,9 @@ Secret of my heart...<br>
 今日もうたってる　わたしと一緒に歌って！<br>
 </h1><br><h3><a href="#し">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="上海慕情 ">【上海慕情 】</a>1 ああ　恋が灯る街よ<br>
+<a id="上海慕情 ">【上海慕情 】</a><br>
+<br>
+1 ああ　恋が灯る街よ<br>
 ねぇ　これが最後の旅さ<br>
 ああ　二人<ruby><rb>外灘</rb><rt>バンド</rt></ruby>見つめ<br>
 西側が過去　東は未来<br>
@@ -182,7 +191,11 @@ Secret of my heart...<br>
 人生いろいろ　男もいろいろ<br>
 女だっていろいろ　咲き乱れるの<br>
 <br>
+（升半音）<br>
 3 人生いろいろ　男もいろいろ<br>
+女だっていろいろ　咲き乱れるの<br>
+<br>
+人生いろいろ　男もいろいろ<br>
 女だっていろいろ　咲き乱れるの<br>
 </h1><br><h3><a href="#し">Back to Top</a></h3>
 <br><hr><br><h1>
@@ -408,6 +421,7 @@ Secret of my heart...<br>
 シレトクの春は　潮路に開けて<br>
 舟人のかいな　海に輝く<br>
 <br>
+（升半音）<br>
 4 オレーオレーオーシコイ　沖の声舟唄<br>
 秋あじだいエリャンサ　<ruby><rb>揚</rb><rt>あ</rt></ruby>げる網ゃ大漁<br>
 <br>
@@ -415,5 +429,5 @@ Secret of my heart...<br>
 何日の日か<ruby><rb>詣</rb><rt>も</rt></ruby>でむ　御親の墓に<br>
 ねむれ静かに<br>
 </h1><br><h3><a href="#し">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
