--- a/enkas/そ.html
+++ b/enkas/そ.html
@@ -5,9 +5,9 @@
 <title>そ - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="そ">Enka Category</a><br><br>
 <h2>
-<a id="そ">そ</a><br><br>
+そ<br><br>
 <a href="#それが大事">それが大事</a><br>
 <a href="#ソーラン渡り鳥">ソーラン渡り鳥</a><br>
 <a href="#ソーラン節">ソーラン節</a><br>
@@ -92,5 +92,5 @@
 ヤサエーエンヤンサノ　ドッコイショ<br>
 ハー　ドッコイショ　ドッコイショ<br>
 </h1><br><h3><a href="#そ">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
