--- a/enkas/た.html
+++ b/enkas/た.html
@@ -5,9 +5,9 @@
 <title>た - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="た">Enka Category</a><br><br>
 <h2>
-<a id="た">た</a><br><br>
+た<br><br>
 <a href="#竹の歌">竹の歌</a><br>
 <a href="#竹田の子守唄">竹田の子守唄</a><br>
 <a href="#達者でナ">達者でナ</a><br>
@@ -79,5 +79,5 @@
 ああ　また逢おな<br>
 かわいたてがみ　なでて　なでてやろ<br>
 </h1><br><h3><a href="#た">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
