--- a/enkas/ち.html
+++ b/enkas/ち.html
@@ -5,13 +5,13 @@
 <title>ち - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="ち">Enka Category</a><br><br>
 <h2>
-<a id="ち">ち</a><br><br>
+ち<br><br>
 <a href="#地上の星">地上の星</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="地上の星">【地上の星】</a>C1-E2<br>
+<a id="地上の星">【地上の星】</a>C1-E2-升半音<br>
 <br>
 1 風の中の昴<br>
 砂の中の銀河<br>
@@ -46,7 +46,12 @@
 つばめよ　地上の星は<br>
 今何処に　あるのだろう<br>
 <br>
-3 風の中の昴<br>
+3 名立るものを追って<br>
+輝くものを追って<br>
+人は<ruby><rb>氷</rb><rt>こおり</rt></ruby>ばかり掴む<br>
+<br>
+（升半音）<br>
+4 風の中の昴<br>
 砂の中の銀河<br>
 みんな何処へ行った<br>
 見送られることもなく<br>
@@ -56,5 +61,5 @@
 つばめよ　地上の星は<br>
 今何処に　あるのだろう<br>
 </h1><br><h3><a href="#ち">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
