--- a/enkas/つ.html
+++ b/enkas/つ.html
@@ -5,9 +5,9 @@
 <title>つ - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="つ">Enka Category</a><br><br>
 <h2>
-<a id="つ">つ</a><br><br>
+つ<br><br>
 <a href="#つぐない">つぐない</a><br>
 <a href="#津軽の花">津軽の花</a><br>
 <a href="#津軽海峡・冬景色">津軽海峡・冬景色</a><br>
@@ -97,5 +97,5 @@
 風の音が胸をゆする　泣けとばかりに<br>
 あゝ　津軽海峡冬景色<br>
 </h1><br><h3><a href="#つ">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
