--- a/enkas/て.html
+++ b/enkas/て.html
@@ -5,13 +5,13 @@
 <title>て - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="て">Enka Category</a><br><br>
 <h2>
-<a id="て">て</a><br><br>
+て<br><br>
 <a href="#手紙 ～拝啓 十五の君へ～">手紙 ～拝啓 十五の君へ～</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="手紙 ～拝啓 十五の君へ～">【手紙 ～拝啓 十五の君へ～】</a>C1-E2-C转Ｇ<br>
+<a id="手紙 ～拝啓 十五の君へ～">【手紙 ～拝啓 十五の君へ～】</a>C1-E2-升/降7半音（G作C）-最高音F2<br>
 <br>
 1 <ruby><rb>拝</rb><rt>はい</rt></ruby><ruby><rb>啓</rb><rt>けい</rt></ruby>この手紙　読んでいるあなたは<br>
 どこで何をして　いるのだろう<br>
@@ -47,10 +47,12 @@
 眠れない夜はあるけど<br>
 <ruby><rb>苦</rb><rt>にが</rt></ruby>くて甘い　今を生きている<br>
 <br>
+(升/降7半音，G作C）<br>
 3 人生の　<ruby><rb>全</rb><rt>すべ</rt></ruby>てに意味があるから<br>
 <ruby><rb>恐</rb><rt>おそ</rt></ruby>れずに　あなたの夢を育てて<br>
 La... Keep on believing...<br>
 <br>
+(回原调）<br>
 負けそうで　 泣きそうで<br>
 消えてしまいそうな僕は<br>
 誰の言葉を　信じ歩けばいいの?<br>
@@ -66,5 +68,5 @@ La... Keep on believing...<br>
 拝啓　この手紙　読んでいるあなたが<br>
 幸せな事を願います<br>
 </h1><br><h3><a href="#て">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
