--- a/enkas/と.html
+++ b/enkas/と.html
@@ -5,9 +5,9 @@
 <title>と - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="と">Enka Category</a><br><br>
 <h2>
-<a id="と">と</a><br><br>
+と<br><br>
 <a href="#Tomorrow">Tomorrow</a><br>
 <a href="#ときめきのルンバ">ときめきのルンバ</a><br>
 <a href="#となりのトトロ">となりのトトロ</a><br>
@@ -61,6 +61,7 @@
 見るものすべてに　おびえないで<br>
 明日は来るよ　君のために<br>
 <br>
+（升半音）<br>
 涙の数だけ　強くなろうよ<br>
 風に揺れている　花のように<br>
 自分をそのまま　信じていてね<br>
@@ -299,7 +300,7 @@
 今はあなたしか愛あいせない<br>
 </h1><br><h3><a href="#と">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="渡月橋 ～君 想ふ～">【渡月橋 ～君 想ふ～】</a>G1-#C-同名大小调<br>
+<a id="渡月橋 ～君 想ふ～">【渡月橋 ～君 想ふ～】</a>G1-同名大小调-最高音<sup>#</sup>C2<br>
 <br>
 1 寄り添う二人に　君がオーバーラップ<br>
 色なき風に　思い馳せて<br>
@@ -312,6 +313,7 @@ Stop　時間を止めて<br>
 会いたい時に　会えない<br>
 切なくてもどかしい<br>
 <br>
+（同名大调）<br>
 から<ruby><rb>紅</rb><rt>くれない</rt></ruby>に染まる　<ruby><rb>渡月橋</rb><rt>とげつきょう</rt></ruby><br>
 <ruby><rb>導</rb><rt>みちび</rt></ruby>かれる日　願って<br>
 川の流れに祈りを込めて<br>
@@ -319,6 +321,7 @@ I've been thinking about you<br>
 I've been thinking about you<br>
 いつも　こころ　君のそば<br>
 <br>
+（回原调）<br>
 2 いにしえの景色　変わりなく<br>
 今　この瞳に映し出す<br>
 <ruby><rb>彩</rb><rt>いろど</rt></ruby>りゆく　季節越えて<br>
@@ -330,6 +333,7 @@ Stock　覚えていますか?<br>
 会いたい時に　会えない<br>
 この胸を焦がすの<br>
 <br>
+（同名大调）<br>
 から紅に水くくるとき<br>
 君との想い　つなげて<br>
 川の流れに祈りを込めて<br>
@@ -337,11 +341,13 @@ I've been thinking about you<br>
 I've been thinking about you<br>
 いつも　君を　探してる<br>
 <br>
+（回原调）<br>
 3 君となら　不安さえ<br>
 どんな時も消えて　いくよ<br>
 いつになったら　優しく<br>
 抱きしめられるのかな<br>
 <br>
+（同名大调）<br>
 から紅の紅葉達さえ<br>
 熱い思いを　告げては<br>
 ゆらり揺れて　歌っています<br>
@@ -374,5 +380,5 @@ I've been thinking about you<br>
 鳥取砂丘の　星が道しるべ<br>
 見えない明日が　見えるでしょうか<br>
 </h1><br><h3><a href="#と">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
