--- a/enkas/な.html
+++ b/enkas/な.html
@@ -5,9 +5,9 @@
 <title>な - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="な">Enka Category</a><br><br>
 <h2>
-<a id="な">な</a><br><br>
+な<br><br>
 <a href="#夏の終わり">夏の終わり</a><br>
 <a href="#夏をあきらめて">夏をあきらめて</a><br>
 <a href="#夏祭り">夏祭り</a><br>
@@ -293,7 +293,9 @@ Let's Get To Be So Fine<br>
 連絡船の　着く港<br>
 </h1><br><h3><a href="#な">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="謎">【謎】</a>G1-升半音后A2-副歌升半音<br>
+<a id="謎">【謎】</a>G1-A2-副歌升半音<br>
+<br>
+（前奏为同名大调）<br>
 <br>
 0 この世であなたの愛を<br>
 手に入れるもの<br>
@@ -376,5 +378,5 @@ Let's Get To Be So Fine<br>
 素直になれるの　愛してる<br>
 でもまさかねそんな事言えない<br>
 </h1><br><h3><a href="#な">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
