--- a/enkas/に.html
+++ b/enkas/に.html
@@ -5,9 +5,9 @@
 <title>に - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="に">Enka Category</a><br><br>
 <h2>
-<a id="に">に</a><br><br>
+に<br><br>
 <a href="#二輪草">二輪草</a><br>
 </h2>
 <br><hr><br><h1>
@@ -37,5 +37,5 @@
 生きる<ruby><rb>力</rb><rt>ちから</rt></ruby>を　くれるひと<br>
 どこに咲いても　ふたりは二輪草<br>
 </h1><br><h3><a href="#に">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
