--- a/enkas/は.html
+++ b/enkas/は.html
@@ -5,9 +5,9 @@
 <title>は - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="は">Enka Category</a><br><br>
 <h2>
-<a id="は">は</a><br><br>
+は<br><br>
 <a href="#Birds">Birds</a><br>
 <a href="#ハイサイおじさん">ハイサイおじさん</a><br>
 <a href="#ハナミズキ">ハナミズキ</a><br>
@@ -24,7 +24,7 @@
 <br><hr><br><h1>
 <a id="Birds">【Birds】</a>A1-C3<br>
 <br>
-0 さよならするために出逢ってゆくのなら<br>
+0 さよならするために　出逢ってゆくのなら<br>
 どうして誰も皆な　あんなに愛し合うの<br>
 <br>
 1 違う夢<ruby><rb>選</rb><rt>えら</rt></ruby>んで　僕たちは<br>
@@ -40,7 +40,7 @@
 指を離すよ　もうこれ以上<br>
 君の微笑み　ついばむ前に<br>
 <br>
-さよならするために出逢ってゆくのなら<br>
+さよならするために　出逢ってゆくのなら<br>
 どうして誰も皆な　あんなに愛し合うの<br>
 時には逢いたくて　時には忘れたくて<br>
 涙に迷う時　伝えて　僕の胸に<br>
@@ -61,7 +61,7 @@
 <ruby><rb>一升</rb><rt>いっす</rt></ruby>ビン我んに　<ruby><rb>呉</rb><rt>くぃ</rt></ruby>みせーみ<br>
 <br>
 2 ハイサイおじさん　ハイサイおじさん<br>
-<ruby><rb>年</rb><rt>とぅし</rt></ruby><ruby><rb>頃</rb><rt>ぐる</rt></ruby>なたくと　<ruby><rb>妻</rb><rt>とじ</rt></ruby><ruby><rb>小</rb><rt>ぐゎ</rt></ruby>ふさぬ<br>
+<ruby><rb>年頃</rb><rt>とぅしぐる</rt></ruby>なたくと　<ruby><rb>妻</rb><rt>とじ</rt></ruby><ruby><rb>小</rb><rt>ぐゎ</rt></ruby>ふさぬ<br>
 <ruby><rb>貴方</rb><rt>うんじゅ</rt></ruby>が<ruby><rb>汝</rb><rt>いなぐ</rt></ruby>ん<ruby><rb>子</rb><rt>ぐわ</rt></ruby>や　<ruby><rb>呉</rb><rt>くぃ</rt></ruby>みそうらに<br>
 <br>
 ありーあり童　いぇー童<br>
@@ -69,7 +69,7 @@
 <ruby><rb>妻</rb><rt>とじ</rt></ruby><ruby><rb>小</rb><rt>ぐゎ</rt></ruby>とめゆんな　いぇー童<br>
 <br>
 あんせおじさん　<ruby><rb>廿オ</rb><rt>はたち</rt></ruby>や余て三十過ぎて<br>
-<ruby><rb>白</rb><rt>しら</rt></ruby><ruby><rb>髪</rb><rt>ぎ</rt></ruby>かみてから　<ruby><rb>妻</rb><rt>とじ</rt></ruby>とめゆみ<br>
+<ruby><rb>白髪</rb><rt>しらぎ</rt></ruby>かみてから　<ruby><rb>妻</rb><rt>とじ</rt></ruby>とめゆみ<br>
 <br>
 3 ハイサイおじさん　ハイサイおじさん<br>
 おじさんカンパチ　まぎさよい<br>
@@ -94,7 +94,7 @@
 いぇんちゅぬヒジ<ruby><rb>小</rb><rt>ぐゎ</rt></ruby>立てゆがや<br>
 <br>
 5 ハイサイおじさん　ハイサイおじさん<br>
-昨<ruby><rb>夜</rb><rt>び</rt></ruby>ぬ<ruby><rb>女</rb><rt>じゅ</rt></ruby><ruby><rb>郎</rb><rt>り</rt></ruby><ruby><rb>小</rb><rt>ぐゎ</rt></ruby>ぬ<ruby><rb>香</rb><rt>かば</rt></ruby>さよい<br>
+昨<ruby><rb>夜</rb><rt>び</rt></ruby>ぬ<ruby><rb>女郎</rb><rt>じゅり</rt></ruby><ruby><rb>小</rb><rt>ぐゎ</rt></ruby>ぬ<ruby><rb>香</rb><rt>かば</rt></ruby>さよい<br>
 うんじゅん一度　めんそーれー<br>
 <br>
 ありあり童　いぇー童<br>
@@ -102,16 +102,17 @@
 おじさんやあまぬ　<ruby><rb>株主</rb><rt>かぶぬし</rt></ruby>ど<br>
 <br>
 あんせんおじさん　<ruby><rb>毎日</rb><rt>めーなち</rt></ruby>あまにくまとーて<br>
-我んねー<ruby><rb>貧</rb><rt>ひん</rt></ruby><ruby><rb>乏</rb><rt>すー</rt></ruby>たきちきゆみ<br>
+我んねー<ruby><rb>貧乏</rb><rt>ひんすー</rt></ruby>たきちきゆみ<br>
 </h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="ハナミズキ">【ハナミズキ】</a>E1-G2<br>
 <br>
 1 空を　押し上げて<br>
-手を伸ばす君　<ruby><rb>五月</rb><rt>ごがつ</rt></ruby>のこと<br>
+手を伸ばす君　五<ruby><rb>月</rb><rt>がつ</rt></ruby>のこと<br>
 どうか　来てほしい<br>
 水<ruby><rb>際</rb><rt>ぎわ</rt></ruby>まで来てほしい<br>
-つぼみをあげよう<br>
+<br>
+つぼみを　あげよう<br>
 庭のハナミズキ<br>
 <br>
 薄紅色の　可愛い君のね<br>
@@ -124,8 +125,9 @@
 僕から気持ちは<ruby><rb>重</rb><rt>おも</rt></ruby>すぎて<br>
 一緒に　わたるには<br>
 きっと船が沈んじゃう<br>
-どうぞゆきなさい<br>
-お先にゆきなさい<br>
+<br>
+どうぞ　ゆきなさい<br>
+お先に　ゆきなさい<br>
 <br>
 僕の<ruby><rb>我</rb><rt>が</rt></ruby>慢が　いつか実を<ruby><rb>結</rb><rt>むす</rt></ruby>び<br>
 果てない波がちゃんと<br>
@@ -137,6 +139,7 @@
 追いかけて白い<ruby><rb>帆</rb><rt>ほ</rt></ruby>を揚げて<br>
 母の　日になれば<br>
 ミズキの<ruby><rb>葉</rb><rt>は</rt></ruby>、贈って下さい<br>
+<br>
 待たなくてもいいよ<br>
 知らなくてもいいよ<br>
 <br>
@@ -161,17 +164,13 @@
 1 心惑わす眼　いつも熱き口<br>
 私の想ってる　あなたの<ruby><rb>面影</rb><rt>おもかげ</rt></ruby><br>
 <br>
-あなたの胸で　私は聞く<br>
-やさしの言葉<br>
-いつもかわらぬ言葉なのに<br>
-<ruby><rb>私</rb><rt>あたし</rt></ruby>はうれしい<br>
-私の胸に　<ruby><rb>幸</rb><rt>さち</rt></ruby>の影が<br>
-ある日さしたの<br>
+あなたの胸で　私は聞く　やさしの言葉<br>
+いつもかわらぬ言葉なのに　<ruby><rb>私</rb><rt>あたし</rt></ruby>はうれしい<br>
+私の胸に　<ruby><rb>幸</rb><rt>さち</rt></ruby>の影が　ある日さしたの<br>
 あなたゆえの私よ　私ゆえのあなたなの<br>
 あなたに逢うと　私の胸ときめく<br>
 <br>
-私の胸に　幸の影が<br>
-ある日さしたの<br>
+私の胸に　幸の影が　ある日さしたの<br>
 あなたゆえの私よ　私ゆえのあなたなの<br>
 あなたに逢うと　私の胸ときめく<br>
 </h1><br><h3><a href="#は">Back to Top</a></h3>
@@ -180,6 +179,7 @@
 <br>
 1 <ruby><rb>埴生</rb><rt>はにゅう</rt></ruby>の<ruby><rb>宿</rb><rt>やど</rt></ruby>も　わが宿<br>
 玉の<ruby><rb>装</rb><rt>よそ</rt></ruby>い　<ruby><rb>羨</rb><rt>うらや</rt></ruby>まじ<br>
+<br>
 のどかなりや　春の空<br>
 花はあるじ　鳥は友<br>
 <br>
@@ -272,17 +272,20 @@
 ながめを何に　たとうべき<br>
 </h1><br><h3><a href="#は">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="花の子ルンルン">【花の子ルンルン】</a>E1-F2-中间有两句转调，C作A<br>
+<a id="花の子ルンルン">【花の子ルンルン】</a>E1-F2-同名大小调<br>
 <br>
+（同名大调）<br>
 0 ルルルンルンルン…… <br>
 <br>
 1 幸せをもたらすと　いわれてる<br>
 どこかでひっそり　咲いている<br>
 花をさがして　花をさがしています<br>
 <br>
+（同名小调）<br>
 コスモスは　帽子に似合う<br>
 タンポポは　お昼寝まくら<br>
 アカシアの　アーチをぬけて<br>
+（同名大调）<br>
 歩いて<ruby><rb>行</rb><rt>ゆ</rt></ruby>きましょう<br>
 <br>
 私は花の子です　名前はルンルンです<br>
@@ -295,9 +298,11 @@
 知らない街から街を行く<br>
 花をさがして　花をさがしています<br>
 <br>
+（同名小调）<br>
 カトレアは　おしゃれな婦人<br>
 ひまわりは　いたずらざかり<br>
 <ruby><rb>菩提树</rb><rt>ぼだいじゅ</rt></ruby>に　祈りをこめて<br>
+（同名大调）<br>
 歩いて<ruby><rb>行</rb><rt>ゆ</rt></ruby>きましょう<br>
 <br>
 私は花の子です　名前はルンルンです<br>
@@ -306,9 +311,11 @@
 <br>
 ルルルンルンルン……<br>
 <br>
+（同名小调）<br>
 3 白バラは　やさしい悪魔<br>
 ひなげしは　おしゃべりが好き<br>
 ねむの木に　おやすみ告げて<br>
+（同名大调）<br>
 歩いて<ruby><rb>行</rb><rt>ゆ</rt></ruby>きましょう<br>
 <br>
 私は花の子です　名前はルンルンです<br>
@@ -319,29 +326,29 @@
 <br><hr><br><h1>
 <a id="花咲く旅路">【花咲く旅路】</a>C1-E2<br>
 <br>
-1 鈴なりの花を<ruby><rb>摘</rb><rt>つ</rt></ruby>み<br>
-吹く風に夏を知る<br>
+1 鈴なりの　花を<ruby><rb>摘</rb><rt>つ</rt></ruby>み<br>
+吹く風に　夏を知る<br>
 おだやかに　ああおだやかに<br>
-今ぼんやり遠くを眺めてる<br>
+今ぼんやり遠くを　眺めてる<br>
 <br>
-はるかなる空の果て<br>
-想い出が<ruby><rb>駈</rb><rt>か</rt></ruby>けめぐる<br>
+はるかなる　空の果て<br>
+想い出が　<ruby><rb>駈</rb><rt>か</rt></ruby>けめぐる<br>
 なだらかな　このなだらかな<br>
-名前さえ知らない坂だけど<br>
+名前さえ知らない　坂だけど<br>
 <br>
 咲く<ruby><rb>紫</rb><rt>むらさき</rt></ruby>は　旅路を<ruby><rb>彩</rb><rt>いろど</rt></ruby>る<br>
 <br>
-2 <ruby><rb>何処</rb><rt>いずこ</rt></ruby>へと鳥は鳴き<br>
-夢出ずる国をゆく<br>
+2 <ruby><rb>何処</rb><rt>いずこ</rt></ruby>へと　鳥は鳴き<br>
+夢出ずる　国をゆく<br>
 世の中は　ああ世の中は<br>
-なぜこんなに<ruby><rb>急</rb><rt>せ</rt></ruby>いてと流れてく<br>
+なぜこんなに<ruby><rb>急</rb><rt>せ</rt></ruby>いてと　流れてく<br>
 <br>
 今宵は月が　旅路を照らそうぞ<br>
 <br>
-3 喜びが川となり<br>
-悲しみは虹を呼ぶ<br>
+3 喜びが　川となり<br>
+悲しみは　虹を呼ぶ<br>
 道無きぞ　この旅だけど<br>
-でもこんなに上手に歩いてる<br>
+でもこんなに上手に　歩いてる<br>
 <br>
 <ruby><rb>稲</rb><rt>いな</rt></ruby><ruby><rb>穂</rb><rt>ほ</rt></ruby>の先が　いつしか<ruby><rb>垂</rb><rt>た</rt></ruby>れコウベ<br>
 咲く<ruby><rb>紫</rb><rt>むらさき</rt></ruby>は　旅路を<ruby><rb>彩</rb><rt>いろど</rt></ruby>る<br>
@@ -352,28 +359,23 @@
 1 川は流れて　どこどこ行くの<br>
 人も流れて　どこどこ行くの<br>
 そんな流れが　つくころには<br>
-花として　花として<br>
-咲かせてあげたい<br>
+花として　花として　咲かせてあげたい<br>
 <br>
 泣きなさい　笑いなさい<br>
-いつの日か　いつの日か<br>
-花を咲かそうよ<br>
+いつの日か　いつの日か　花を咲かそうよ<br>
 <br>
 2 涙流れて　どこどこ行くの<br>
 愛も流れて　どこどこ行くの<br>
 そんな流れを　このうちに<br>
-花として　花として<br>
-むかえてあげたい<br>
+花として　花として　むかえてあげたい<br>
 <br>
 泣きなさい　笑いなさい<br>
-いつの日か　いつの日か<br>
-花を咲かそうよ<br>
+いつの日か　いつの日か　花を咲かそうよ<br>
 <br>
 3 花は花として　わらいもできる<br>
 人は人として　涙も流す<br>
 それが自然の　うたなのさ<br>
-心の中に　心の中に<br>
-花を咲かそうよ<br>
+心の中に　心の中に　花を咲かそうよ<br>
 <br>
 泣きなさい　笑いなさい<br>
 いついつまでも　いついつまでも<br>
@@ -383,5 +385,5 @@
 いついつまでも　いついつまでも<br>
 花をつかもうよ<br>
 </h1><br><h3><a href="#は">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
