--- a/enkas/ひ.html
+++ b/enkas/ひ.html
@@ -5,9 +5,9 @@
 <title>ひ - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="ひ">Enka Category</a><br><br>
 <h2>
-<a id="ひ">ひ</a><br><br>
+ひ<br><br>
 <a href="#ひまわり">ひまわり</a><br>
 <a href="#光と影のロマン">光と影のロマン</a><br>
 <a href="#瞳をとじて">瞳をとじて</a><br>
@@ -73,12 +73,12 @@
 僕のひまわり…<br>
 </h1><br><h3><a href="#ひ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="光と影のロマン">【光と影のロマン】</a>E1-前C后A-C3<br>
+<a id="光と影のロマン">【光と影のロマン】</a>E1-C3<br>
 <br>
 1 ロマン語れば一晩中<br>
 疲れ知らずの all night long<br>
 恋する暇もないよ<br>
-波が押し寄せてくる<br>
+波が　押し寄せてくる<br>
 <br>
 記憶の中を<ruby><rb>泳</rb><rt>およ</rt></ruby>いでも<br>
 现実は coll and dry<br>
@@ -175,5 +175,5 @@ I wish forever<br>
 <br>
 君がくれたから<br>
 </h1><br><h3><a href="#ひ">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
