--- a/enkas/ふ.html
+++ b/enkas/ふ.html
@@ -5,9 +5,9 @@
 <title>ふ - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="ふ">Enka Category</a><br><br>
 <h2>
-<a id="ふ">ふ</a><br><br>
+ふ<br><br>
 <a href="#ブッダのように私は死んだ">ブッダのように私は死んだ</a><br>
 <a href="#プラネタリウム">プラネタリウム</a><br>
 <a href="#故郷">故郷</a><br>
@@ -59,7 +59,7 @@
 やっぱり私は男を抱くわ<br>
 </h1><br><h3><a href="#ふ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="プラネタリウム">【プラネタリウム】</a>G1-升半音-#G2<br>
+<a id="プラネタリウム">【プラネタリウム】</a>E1-G2-升半音<br>
 <br>
 1 夕<ruby><rb>月</rb><rt>づく</rt></ruby>夜　顔だす<br>
 消えてく　子供の声<br>
@@ -104,6 +104,7 @@
 同じ幸せを見たいんだ<br>
 あの香りとともに　花火がぱっと開く<br>
 <br>
+（升半音）<br>
 行きたいよ　君のところへ<br>
 小さな手をにぎりしめて<br>
 泣きたいよ　それはそれは<br>
@@ -132,18 +133,19 @@
 水は清き故郷<br>
 </h1><br><h3><a href="#ふ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="白金ディスコ">【白金ディスコ】</a>G1-副歌升全音-B2<br>
+<a id="白金ディスコ">【白金ディスコ】</a>G1-副歌升2半音-B2<br>
 <br>
 1 見渡せば　一面　<ruby><rb>白金</rb><rt>はっきん</rt></ruby>の世界に<br>
 一歩だけ　踏み出して<br>
 いつまでも　止まらない<br>
-この胸のときめきで　一緒に踊ろう<br>
+この胸の　ときめきで　一緒に踊ろう<br>
 <br>
 君の背中で　あの日<br>
 みつけた月が　今日も<br>
 ミラーボールみたいに　夜空で<br>
 キラリ　チラり　輝いてる<br>
 <br>
+（升2半音）<br>
 かわってくもの　かわらないもの<br>
 <ruby><rb>飽</rb><rt>あ</rt></ruby>きっぽい　私が<br>
 はじめて　知った　この永遠を<br>
@@ -154,6 +156,7 @@
 プラチナ　なみだがでちゃうのは<br>
 なんで? どして?　ディスコティック<br>
 <br>
+（回原调）<br>
 2 振り向けば　いつでも<br>
 並んでる　足跡<br>
 君とねぇ　じゃれあって<br>
@@ -166,6 +169,7 @@
 今日が続きますよぅに　なんて<br>
 ヒラリ　フラリ　夢の中へ<br>
 <br>
+（升2半音）<br>
 ささやかだけど　かけがえのない<br>
 歴史を<ruby><rb>重</rb><rt>かさ</rt></ruby>ねて<br>
 ちいさなうそも　ほんとうになる<br>
@@ -225,9 +229,9 @@
 <br><hr><br><h1>
 <a id="釜山港へ帰れ">【釜山港へ帰れ】</a>E1-A2<br>
 <br>
-1 つばき咲く春なのに<br>
+1 つばき咲く　春なのに<br>
 あなたは帰らない<br>
-たたずむ釜山港に<br>
+たたずむ　釜山港に<br>
 涙の雨が降る<br>
 <br>
 あついその胸に　顔うずめて<br>
@@ -236,7 +240,7 @@
 トラワヨ　プサンハンへ<br>
 逢いたい　あなた<br>
 <br>
-2 <ruby><rb>行</rb><rt>ゆ</rt></ruby>きたくてたまらない<br>
+2 <ruby><rb>行</rb><rt>ゆ</rt></ruby>きたくて　たまらない<br>
 あなたのいる町へ<br>
 さまよう釜山港は<br>
 霧笛が胸を刺す<br>
@@ -252,7 +256,6 @@
 <br>
 トラワヨ　プサンハンへ<br>
 逢いたい　あなた<br>
-<br>
 </h1><br><h3><a href="#ふ">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
