--- a/enkas/ま.html
+++ b/enkas/ま.html
@@ -5,9 +5,9 @@
 <title>ま - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="ま">Enka Category</a><br><br>
 <h2>
-<a id="ま">ま</a><br><br>
+ま<br><br>
 <a href="#また君に恋してる">また君に恋してる</a><br>
 <a href="#まつり">まつり</a><br>
 <a href="#マイ フレンド">マイ フレンド</a><br>
@@ -60,8 +60,8 @@
 2 男は祭りで　そうさ<br>
 男をみがくんだ<br>
 山の神　海の神<br>
-<br>
 命を本当に　ありがとう<br>
+<br>
 船に五<ruby><rb>色</rb><rt>しき</rt></ruby>の　旗をたて<br>
 海の男が　風を切る<br>
 祭りだ　祭りだ　祭りだ　大漁祭り<br>
@@ -73,11 +73,13 @@
 これが日本の　祭りだよ<br>
 </h1><br><h3><a href="#ま">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="マイ フレンド">【マイ フレンド】</a>E1-降4半音-bB<br>
+<a id="マイ フレンド">【マイ フレンド】</a>E1-降4半音-<sup>b</sup>B2<br>
 <br>
+（原调降4半音）<br>
 0 あなたを想うだけで　心は強くなれる<br>
 ずっと見つめてるから　走り続けて<br>
 <br>
+（回原调，E作C）<br>
 1 ひたむきだった遠い日の夢は<br>
 今でも眩しい<br>
 どんなに不安がいっぱいでも<br>
@@ -86,27 +88,31 @@
 飾らない素顔のあなたが好き…<br>
 変わってしまうことが哀しい<br>
 <br>
+（降4半音）<br>
 いつも輝いていたね<br>
 少年のまま　瞳はMy Friend<br>
 あなたがそばにいると<br>
 何故か素直になれた<br>
 この<ruby><rb>距離</rb><rt>きょり</rt></ruby>通り抜ける　風になりたい<br>
 <br>
+（回原调，E作C）<br>
 2 <ruby><rb>真実</rb><rt>ほんとう</rt></ruby>の愛なら<br>
 きっと色んな事<br>
 乗り越えられたのに<br>
 星のパレード　涙がこぼれない様に<br>
 大きく息を吸った<br>
+<br>
 ひとりでいる時の淋しさより二人で<br>
 いる時の孤独の<ruby><rb>方</rb><rt>ほう</rt></ruby>が哀しい<br>
 <br>
+（降4半音）<br>
 いつも笑っていたね　あの頃二人<br>
 せつないMy Friend<br>
 あなたを想うだけで　心は強くなれる<br>
 ずっと見つめてるから　走り続けて<br>
 <br>
 3 いつも輝いていたね　少年のまま<br>
-　瞳はMy Friend<br>
+瞳はMy Friend<br>
 あなたを想うだけで　心は強くなれた<br>
 ずっと見つめてるから　走り続けて<br>
 走り続けて…<br>
@@ -231,5 +237,5 @@
 ひとつ間違えて<br>
 迷い道くねくね<br>
 </h1><br><h3><a href="#ま">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
