--- a/enkas/み.html
+++ b/enkas/み.html
@@ -5,9 +5,9 @@
 <title>み - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="み">Enka Category</a><br><br>
 <h2>
-<a id="み">み</a><br><br>
+み<br><br>
 <a href="#みずいろの手紙">みずいろの手紙</a><br>
 <a href="#みずいろの雨">みずいろの雨</a><br>
 <a href="#未来へ">未来へ</a><br>
@@ -21,26 +21,26 @@
 0 お元気ですか そして　今でも<br>
 愛しているといって下さいますか<br>
 <br>
-1 みずいろは涙いろ　そんな<ruby><rb>便</rb><rt>びん</rt></ruby>箋に<br>
-泣きそうな心をたくします<br>
-あれこれと楽しげなことを書きならべ<br>
-さびしさをまぎらす私です<br>
+1 みずいろは　涙いろ　そんな<ruby><rb>便</rb><rt>びん</rt></ruby>箋に<br>
+泣きそうな　心を　たくします<br>
+あれこれと　楽しげな　ことを書きならべ<br>
+さびしさを　まぎらす　私です<br>
 <br>
-逢えなくなって二月過ぎて<br>
-なおさらつのる恋心<br>
-手紙読んだら少しでいいから<br>
-私のもとへ来て下さい<br>
+逢えなくなって二月<br>
+過ぎて　なおさらつのる恋心<br>
+手紙　読んだら　少しでいいから<br>
+私のもとへ　来て下さい<br>
 <br>
-2 みずいろは涙いろ　それを知りながら<br>
-あなたへの手紙を書いてます<br>
-誰からも恋をしているとからかわれ<br>
-それだけがうれしい私です<br>
+2 みずいろは　涙いろ　それを知りながら<br>
+あなたへの　手紙を　書いてます<br>
+誰からも　恋をしているとからかわれ<br>
+それだけが　嬉しい私です<br>
 <br>
-愛しているといわれた時が<br>
-だんだん遠くなるみたい<br>
-手紙読んだら少しでいいから<br>
-私のもとへ来て下さい<br>
-私のもとへ来て下さい<br>
+愛しているといわれた<br>
+時が　だんだん遠くなるみたい<br>
+手紙　読んだら　少しでいいから<br>
+私のもとへ　来て下さい<br>
+私のもとへ　来て下さい<br>
 </h1><br><h3><a href="#み">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="みずいろの雨">【みずいろの雨】</a>E1-C3<br>
@@ -75,73 +75,73 @@
 <a id="未来へ">【未来へ】</a>E1-A2<br>
 <br>
 0 ほら　足元を見てごらん<br>
-これがあなたの歩む道<br>
+これが　あなたの　歩む道<br>
 ほら　前を見てごらん<br>
-あれがあなたの未来<br>
+あれが　あなたの未来<br>
 <br>
-1 母がくれたたくさんの優しさ<br>
-愛を<ruby><rb>抱</rb><rt>いだ</rt></ruby>いて歩めと繰り返した<br>
-あの時はまだ<ruby><rb>幼</rb><rt>おさな</rt></ruby>くて意味など知らない<br>
-そんな私の手を握り<br>
-一緒に歩んできた<br>
+1 母がくれた　たくさんの優しさ<br>
+愛を　<ruby><rb>抱</rb><rt>いだ</rt></ruby>いて　歩めと繰り返した<br>
+あの時はまだ　<ruby><rb>幼</rb><rt>おさな</rt></ruby>くて　意味など知らない<br>
+そんな私の　手を握り<br>
+一緒に　歩んできた<br>
 <br>
-夢はいつも空高くあるから<br>
-届かなくて怖いね<br>
-だけど追い続けるの<br>
-自分の物語だからこそ諦めたくない<br>
-不安になると手を握り<br>
-一緒に歩んできた<br>
+夢はいつも　空高くあるから<br>
+届かなくて　怖いね<br>
+だけど追い　続けるの<br>
+自分の物語　だからこそ　諦めたくない<br>
+不安になると　手を握り<br>
+一緒に　歩んできた<br>
 <br>
-その優しさを時には<ruby><rb>嫌</rb><rt>いや</rt></ruby>がり<br>
-離れた母へ素直になれず<br>
+その優しさを　時には<ruby><rb>嫌</rb><rt>いや</rt></ruby>がり<br>
+離れた　母へ素直になれず<br>
 <br>
 ほら　足元を見てごらん<br>
-これがあなたの歩む道<br>
+これが　あなたの　歩む道<br>
 ほら　前を見てごらん<br>
-あれがあなたの未来<br>
+あれが　あなたの未来<br>
 <br>
-2 その優しさを時には嫌がり<br>
-離れた母へ素直になれず<br>
+2 その優しさを　時には嫌がり<br>
+離れた　母へ素直になれず<br>
 <br>
 ほら 足元を見てごらん<br>
-これがあなたの歩む道<br>
+これが　あなたの　歩む道<br>
 ほら　前を見てごらん<br>
-あれがあなたの未来<br>
+あれが　あなたの未来<br>
 <br>
 ほら　足元を見てごらん<br>
-これがあなたの歩む道<br>
+これが　あなたの　歩む道<br>
 ほら　前を見てごらん<br>
-あれがあなたの未来<br>
+あれが　あなたの未来<br>
 <br>
-未来へ向かって<br>
-ゆっくりと歩いて行こう<br>
+未来へ　向かって<br>
+ゆっくりと　歩いて行こう<br>
 </h1><br><h3><a href="#み">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="水色">【水色】</a>G1-C3<br>
 <br>
-1 想いは水色の　<ruby><rb>雫</rb><rt>しずく</rt></ruby>の中で揺れてる<br>
-三<ruby><rb>日</rb><rt>か</rt></ruby>月が手のひらに浮かぶ　この夜に<br>
+1 想いは　水色の　<ruby><rb>雫</rb><rt>しずく</rt></ruby>の中で揺れてる<br>
+三<ruby><rb>日</rb><rt>か</rt></ruby>月が　手のひらに　浮かぶ　この夜に<br>
 今ひとたびの　言葉だけ<br>
 貴方に伝えましょう<br>
 <br>
-溶けては<ruby><rb>染</rb><rt>し</rt></ruby>みわたるほのかな夜の吐息よ<br>
-<ruby><rb>愛</rb><rt>いと</rt></ruby>しい涙色の声で泣く虫と<br>
-<ruby><rb>闇</rb><rt>やみ</rt></ruby>夜を照らす星達の　心に憧れて<br>
+溶けては　<ruby><rb>染</rb><rt>し</rt></ruby>みわたる　ほのかな夜の吐息よ<br>
+<ruby><rb>愛</rb><rt>いと</rt></ruby>しい　涙色の　声で泣く虫と<br>
+<ruby><rb>闇</rb><rt>やみ</rt></ruby>夜を照らす　星達の　心に憧れて<br>
 <br>
-<ruby><rb>悪戯</rb><rt>いたずら</rt></ruby>な花びら<br>
-遥か遠い雲の便り<br>
+<ruby><rb>悪戯</rb><rt>いたずら</rt></ruby>な　花びら<br>
+遥か遠い　雲の便り<br>
 <br>
-2 わたしは水色の翼　大空に広げ<br>
-疲れて飛べない日は　大きな木に止まり<br>
-愛の言葉と風の唄　貴方にうたいましょう<br>
+2 私は　水色の翼　大空に広げ<br>
+疲れて　飛べない日は　大きな木に止まり<br>
+愛の言葉と　風の唄　貴方にうたいましょう<br>
 <br>
-3 季節は限りなく回り続けてるけど<br>
-わたしのこの心に　光る水色は<br>
+3 季節は　限りなく　回り続けてるけど<br>
+私の　この心に　光る水色は<br>
 いついつまでも　変わらない　空と海の色<br>
 <br>
 思い<ruby><rb>出</rb><rt>で</rt></ruby>よ　ありがとう<br>
 白い波が　頬を濡らす<br>
-青い<ruby><rb>地球</rb><rt>ほし</rt></ruby>が眩しすぎて<br>
+青い<ruby><rb>地球</rb><rt>ほし</rt></ruby>が　眩しすぎて<br>
 </h1><br><h3><a href="#み">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="港町ブルース">【港町ブルース】</a>C1-E2<br>
@@ -182,37 +182,32 @@
 1 南に向いてる窓を明け<br>
 一人で見ている　海の色<br>
 美しすぎると　怖くなる<br>
-若さによく似た真昼の蜃気楼<br>
+若さによく似た　真昼の　蜃気楼<br>
 <br>
-Wind is blowing from the Aegean<br>
-女は海<br>
-好きな男の腕の中でも<br>
-違う男の夢を見る<br>
-Uh-　Ah-　Uh-　Ah-<br>
+Wind is blowing from the Aegean　女は海<br>
+好きな男の　腕の中でも<br>
+違う男の　夢を見る　Uh-<br>
+Ah-　Uh-　Ah-<br>
 私の中でお眠りなさい<br>
-Wind is blowing from the Aegean<br>
-女は恋<br>
+Wind is blowing from the Aegean　女は恋<br>
 <br>
 2 昨夜の余韻が隅々に<br>
 <ruby><rb>気怠</rb><rt>けだる</rt></ruby>い甘さを　残してる<br>
 レースのカーテン　ひきちぎり<br>
-体に巻きつけ　踊ってみたくなる<br>
+体に巻きつけ　踊って　みたくなる<br>
 <br>
-Wind is blowing from the Aegean<br>
-女は海<br>
-やさしい人に抱かれながらも<br>
-強い男にひかれてく<br>
-Uh-　Ah-　Uh-　Ah-<br>
+Wind is blowing from the Aegean　女は海<br>
+やさしい人に　抱かれながらも<br>
+強い男に　ひかれてく　Uh-<br>
+Ah-　Uh-　Ah-<br>
 私の中でお眠りなさい<br>
 <br>
-3 Wind is blowing from the Aegean<br>
-女は海<br>
-好きな男の腕の中でも<br>
-違う男の夢を見る<br>
-Uh-　Ah-　Uh-　Ah-<br>
+3 Wind is blowing from the Aegean　女は海<br>
+好きな男の　腕の中でも<br>
+違う男の　夢を見る　Uh-<br>
+Ah-　Uh-　Ah-<br>
 私の中でお眠りなさい<br>
-Wind is blowing from the Aegean<br>
-女は恋<br>
+Wind is blowing from the Aegean　女は恋<br>
 </h1><br><h3><a href="#み">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
