--- a/enkas/め.html
+++ b/enkas/め.html
@@ -5,9 +5,9 @@
 <title>め - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="め">Enka Category</a><br><br>
 <h2>
-<a id="め">め</a><br><br>
+め<br><br>
 <a href="#めぐる季節">めぐる季節</a><br>
 </h2>
 <br><hr><br><h1>
@@ -52,5 +52,5 @@
 もうすぐ見えてくる<br>
 夢を渡ってゆこう<br>
 </h1><br><h3><a href="#め">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
