--- a/enkas/も.html
+++ b/enkas/も.html
@@ -5,9 +5,9 @@
 <title>も - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="も">Enka Category</a><br><br>
 <h2>
-<a id="も">も</a><br><br>
+も<br><br>
 <a href="#森のくまさん">森のくまさん</a><br>
 <a href="#森の水車">森の水車</a><br>
 <a href="#紅葉">紅葉</a><br>
@@ -96,5 +96,5 @@
 赤や<ruby><rb>黄</rb><rt>き</rt></ruby>色の　色様々に<br>
 水の上にも　織る<ruby><rb>錦</rb><rt>にしき</rt></ruby><br>
 </h1><br><h3><a href="#も">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
