--- a/enkas/ゆ.html
+++ b/enkas/ゆ.html
@@ -5,9 +5,9 @@
 <title>ゆ - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="ゆ">Enka Category</a><br><br>
 <h2>
-<a id="ゆ">ゆ</a><br><br>
+ゆ<br><br>
 <a href="#夕焼けの歌">夕焼けの歌</a><br>
 <a href="#夢のしずく">夢のしずく</a><br>
 <a href="#雪の華">雪の華</a><br>
@@ -148,5 +148,5 @@ La…<br>
 二人の胸にそっと　想い出を描くよ<br>
 これからも君と　ずっと<br>
 </h1><br><h3><a href="#ゆ">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
