--- a/enkas/よ.html
+++ b/enkas/よ.html
@@ -5,9 +5,9 @@
 <title>よ - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="よ">Enka Category</a><br><br>
 <h2>
-<a id="よ">よ</a><br><br>
+よ<br><br>
 <a href="#夜桜お七">夜桜お七</a><br>
 <a href="#夜空ノムコウ">夜空ノムコウ</a><br>
 </h2>
@@ -76,5 +76,5 @@
 あれから　ぼくたちは　何かを信じてこれたかなぁ<br>
 夜空の向こうには　明日がもう待っている<br>
 </h1><br><h3><a href="#よ">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
