--- a/enkas/り.html
+++ b/enkas/り.html
@@ -5,9 +5,9 @@
 <title>り - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="り">Enka Category</a><br><br>
 <h2>
-<a id="り">り</a><br><br>
+り<br><br>
 <a href="#旅愁">旅愁</a><br>
 </h2>
 <br><hr><br><h1>
@@ -23,5 +23,5 @@
 恋しや　故郷　懐かしい父母<br>
 思いに　浮かぶは　<ruby><rb>杜</rb><rt>もり</rt></ruby>の<ruby><rb>梢</rb><rt>こずえ</rt></ruby><br>
 </h1><br><h3><a href="#り">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
