--- a/enkas/る.html
+++ b/enkas/る.html
@@ -5,9 +5,9 @@
 <title>る - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="る">Enka Category</a><br><br>
 <h2>
-<a id="る">る</a><br><br>
+る<br><br>
 <a href="#ルージュ">ルージュ</a><br>
 </h2>
 <br><hr><br><h1>
@@ -39,5 +39,5 @@
 つくり笑いが　うまくなりました<br>
 ル－ジュ　ひくたびに　分かります<br>
 </h1><br><h3><a href="#る">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
