--- a/enkas/く.html
+++ b/enkas/く.html
@@ -5,9 +5,9 @@
 <title>く - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="く">Enka Category</a><br><br>
 <h2>
-<a id="く">く</a><br><br>
+く<br><br>
 <a href="#唇よ、熱く君を語れ">唇よ、熱く君を語れ</a><br>
 <a href="#空港">空港</a><br>
 </h2>
@@ -72,5 +72,5 @@ Oh beautiful and free<br>
 どうぞ帰って　あの人のもとへ<br>
 私は一人　去ってゆく<br>
 </h1><br><h3><a href="#く">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
