--- a/enkas/す.html
+++ b/enkas/す.html
@@ -5,9 +5,9 @@
 <title>す - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="す">Enka Category</a><br><br>
 <h2>
-<a id="す">す</a><br><br>
+す<br><br>
 <a href="#好きで、好きで、好きで。">好きで、好きで、好きで。</a><br>
 <a href="#好きな人">好きな人</a><br>
 <a href="#好きになった人">好きになった人</a><br>
@@ -15,13 +15,14 @@
 <a href="#昴">昴</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="好きで、好きで、好きで。">【好きで、好きで、好きで。】</a>C1-F2-副歌升三度<br>
+<a id="好きで、好きで、好きで。">【好きで、好きで、好きで。】</a>G1-G2-同名大小调（最低音<sup>#</sup>F1）<br>
 <br>
 0 好きで　好きで　好きで<br>
 仕方のない恋で　終わりたくない<br>
 好きで　好きで　好きで<br>
 あなた<ruby><rb>以外</rb><rt>いがい</rt></ruby>　何もいらない<br>
 <br>
+（同名大调）<br>
 1 初めて気付いたよ　こんなに人を<br>
 愛せるということ　<ruby><rb>些細</rb><rt>ささい</rt></ruby>な言葉でも<br>
 <ruby><rb>右</rb><rt>みぎ</rt></ruby>へ<ruby><rb>左</rb><rt>ひだり</rt></ruby>へ　心がざわめく<br>
@@ -35,6 +36,7 @@
 好きで　好きで　好きで<br>
 仕方ない気持ちを<ruby><rb>伝</rb><rt>つた</rt></ruby>えて<br>
 <br>
+（同名大调）<br>
 2 こんな私のこと<br>
 <ruby><rb>認</rb><rt>みと</rt></ruby>めてくれた最初の人だった<br>
 こぼれてしまった涙をふいた<br>
@@ -183,5 +185,5 @@
 ヤーレン　ソーラン　ソーラン　ソーラン<br>
 娘ソーラン　ああ　渡り鳥<br>
 </h1><br><h3><a href="#す">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
