--- a/enkas/せ.html
+++ b/enkas/せ.html
@@ -5,9 +5,9 @@
 <title>せ - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="せ">Enka Category</a><br><br>
 <h2>
-<a id="せ">せ</a><br><br>
+せ<br><br>
 <a href="#世界が終るまでは">世界が終るまでは</a><br>
 <a href="#世界に一つだけの花">世界に一つだけの花</a><br>
 <a href="#千の風になって">千の風になって</a><br>
@@ -118,7 +118,7 @@ NO.1にならなくてもいい<br>
 あの大きな空を　吹きわたっています<br>
 </h1><br><h3><a href="#せ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="千本桜">【千本桜】</a>D1-A2-升全音<br>
+<a id="千本桜">【千本桜】</a>D1-A2-升2半音<br>
 <br>
 1 <ruby><rb>大胆不敵</rb><rt>だいたんふてき</rt></ruby>にハイカラ<ruby><rb>革命</rb><rt>かくめい</rt></ruby><br>
 <ruby><rb>磊</rb><rt>らい</rt></ruby>々<ruby><rb>落</rb><rt>らく</rt></ruby>々　反戦国家<br>
@@ -134,6 +134,7 @@ NO.1にならなくてもいい<br>
 君ノ声モ届カナイヨ<br>
 此処は<ruby><rb>宴</rb><rt>うたげ</rt></ruby>　<ruby><rb>鋼</rb><rt>はがね</rt></ruby>の<ruby><rb>檻</rb><rt>おり</rt></ruby><br>
 その断頭台で見<ruby><rb>下</rb><rt>お</rt></ruby>ろして<br>
+<br>
 三千世界　<ruby><rb>常</rb><rt>よこ</rt></ruby>世之闇<br>
 <ruby><rb>嘆</rb><rt>なげ</rt></ruby>ク唄モ聞コエナイヨ<br>
 青藍の空 遥か<ruby><rb>彼方</rb><rt>かなた</rt></ruby><br>
@@ -151,6 +152,7 @@ NO.1にならなくてもいい<br>
 千本桜　夜ニ<ruby><rb>紛</rb><rt>まぎ</rt></ruby>レ　君ノ声モ届カナイヨ<br>
 此処は<ruby><rb>宴</rb><rt>うたげ</rt></ruby>　<ruby><rb>鋼</rb><rt>はがね</rt></ruby>の<ruby><rb>檻</rb><rt>おり</rt></ruby><br>
 その断頭台で見下ろして<br>
+<br>
 三千世界　<ruby><rb>常</rb><rt>よこ</rt></ruby>世之闇<br>
 <ruby><rb>嘆</rb><rt>なげ</rt></ruby>ク唄モ聞コエナイヨ<br>
 希望の丘　遥か彼方<br>
@@ -165,11 +167,13 @@ NO.1にならなくてもいい<br>
 君ノ声モ届カナイヨ<br>
 此処は<ruby><rb>宴</rb><rt>うたげ</rt></ruby>　<ruby><rb>鋼</rb><rt>はがね</rt></ruby>の<ruby><rb>檻</rb><rt>おり</rt></ruby><br>
 その断頭台を飛び<ruby><rb>降</rb><rt>お</rt></ruby>りて<br>
+<br>
+（升2半音）<br>
 千本桜　夜ニ紛レ　君が歌い僕は踊る<br>
 此処は宴　鋼の檻　さあ光線銃を<ruby><rb>撃</rb><rt>う</rt></ruby>ちまくれ<br>
 </h1><br><h3><a href="#せ">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="清流">【清流】</a>C1-C2-副歌升全音-尾声升半音<br>
+<a id="清流">【清流】</a>C1-C2-副歌升2半音-尾声升半音<br>
 <br>
 1 なぜ<ruby><rb>競</rb><rt>きそ</rt></ruby>わなければ<br>
 いられないのでしょう<br>
@@ -182,11 +186,13 @@ NO.1にならなくてもいい<br>
 <ruby><rb>掌</rb><rt>てのひら</rt></ruby>に心は<ruby><rb>入</rb><rt>はい</rt></ruby>らない<br>
 私が<ruby><rb>味方</rb><rt>みかた</rt></ruby>だと　分からない<br>
 <br>
+（升2半音）<br>
 流れよ　清き流れよ<br>
 始めの気持ちを忘れても<br>
  流れよ　どちらからともなく<br>
 <ruby><rb>交</rb><rt>まじ</rt></ruby>わり合って流れてゆけ<br>
 <br>
+（回原调）<br>
 2 世の中に<ruby><rb>争</rb><rt>あらそ</rt></ruby>いは　数限りなくある<br>
 <ruby><rb>勝</rb><rt>か</rt></ruby>ちと負けとで<ruby><rb>成</rb><rt>な</rt></ruby>り立ってる<br>
 だからといってあなたまで	<br>
@@ -197,11 +203,13 @@ NO.1にならなくてもいい<br>
 おかなけりゃ<ruby><rb>逃</rb><rt>に</rt></ruby>げると　思ってる<br>
 私が味方だと　分からない<br>
 <br>
+（升2半音）<br>
 流れよ　清き流れよ<br>
 始めの<ruby><rb>滴</rb><rt>しずく</rt></ruby>を忘れても<br>
  流れよ　どちらからともなく<br>
 交わり合って流れてゆけ<br>
 <br>
+（上述调升半音）<br>
 3 流れよ　清き流れよ<br>
 始めの滴を忘れても<br>
  流れよ　どちらからともなく<br>
@@ -232,5 +240,5 @@ NO.1にならなくてもいい<br>
 瀬戸は夕焼け　明日も晴れる<br>
 二人の門出　祝っているわ<br>
 </h1><br><h3><a href="#せ">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
