--- a/enkas/ほ.html
+++ b/enkas/ほ.html
@@ -5,9 +5,9 @@
 <title>ほ - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="ほ">Enka Category</a><br><br>
 <h2>
-<a id="ほ">ほ</a><br><br>
+ほ<br><br>
 <a href="#ぼくがいる">ぼくがいる</a><br>
 </h2>
 <br><hr><br><h1>
@@ -33,5 +33,5 @@
 いいコだ　いいコ　泣かないでくれ<br>
 近くにこのぼくがいる　コナン<br>
 </h1><br><h3><a href="#ほ">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
