--- a/enkas/む.html
+++ b/enkas/む.html
@@ -5,9 +5,9 @@
 <title>む - Enka Lyrics World</title>
 </head>
 <body>
-<a href="..\indexenka.html">Enka Category</a><br><br>
+<a href="..\indexenka.html" id="む">Enka Category</a><br><br>
 <h2>
-<a id="む">む</a><br><br>
+む<br><br>
 <a href="#ムーンライト伝説">ムーンライト伝説</a><br>
 <a href="#無錫旅情">無錫旅情</a><br>
 <a href="#麦畑">麦畑</a><br>
@@ -29,8 +29,7 @@
 月の光に　<ruby><rb>導</rb><rt>みちび</rt></ruby>かれ<br>
 何度も　巡り会う<br>
 <br>
-<ruby><rb>星座</rb><rt>せいざ</rt></ruby>の瞬き数え<br>
-<ruby><rb>占</rb><rt>うらな</rt></ruby>う恋の<ruby><rb>行方</rb><rt>ゆくえ</rt></ruby><br>
+<ruby><rb>星座</rb><rt>せいざ</rt></ruby>の瞬き数え　<ruby><rb>占</rb><rt>うらな</rt></ruby>う恋の<ruby><rb>行方</rb><rt>ゆくえ</rt></ruby><br>
 同じ<ruby><rb>地球</rb><rt>くに</rt></ruby>に生まれたの<br>
 ミラクルロマンス<br>
 <br>
@@ -49,8 +48,7 @@
 3 不思議な奇跡クロスして<br>
 何度も　巡り会う<br>
 <br>
-<ruby><rb>星座</rb><rt>せいざ</rt></ruby>の瞬き数え<br>
-<ruby><rb>占</rb><rt>うらな</rt></ruby>う恋の<ruby><rb>行方</rb><rt>ゆくえ</rt></ruby><br>
+<ruby><rb>星座</rb><rt>せいざ</rt></ruby>の瞬き数え　<ruby><rb>占</rb><rt>うらな</rt></ruby>う恋の<ruby><rb>行方</rb><rt>ゆくえ</rt></ruby><br>
 同じ<ruby><rb>地球</rb><rt>くに</rt></ruby>に生まれたの<br>
 ミラクルロマンス<br>
 信じているの　ミラクルロマンス<br>
@@ -193,5 +191,5 @@
 俺らもパソコン始めっか<br>
 これから１０年　麦畑…つ<br>
 </h1><br><h3><a href="#む">Back to Top</a></h3>
-</body>
+<a href="..\indexenka.html">Enka Category</a></body>
 </html>
